objects/Agent_Target__c/Agent_Target__c.object-meta.xml
<CustomObject>
    <label>Agent Target</label>
    <nameField>
        <displayFormat>AT-{0000000000}</displayFormat>
        <label>Target ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agent Targets</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>