objects/Agent_Target__c/fields/Average_Premium_Per_Case__c.field-meta.xml
<CustomField>
    <fullName>Average_Premium_Per_Case__c</fullName>
    <label>Average Premium Per Case</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>