objects/Agent_Target__c/fields/Average_Premium_to_PC_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Average_Premium_to_PC_Ratio__c</fullName>
    <label>Average Premium to PC Ratio</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>