objects/Agent_Target__c/fields/Cases_Opened_Target__c.field-meta.xml
<CustomField>
    <fullName>Cases_Opened_Target__c</fullName>
    <label>Cases Opened Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>