objects/Agent_Target__c/fields/Closing_Interviews_Target__c.field-meta.xml
<CustomField>
    <fullName>Closing_Interviews_Target__c</fullName>
    <label>Closing Interviews Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>