objects/Agent_Target__c/fields/Index_for_Case_Opened__c.field-meta.xml
<CustomField>
    <fullName>Index_for_Case_Opened__c</fullName>
    <label>Index for Case Opened</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>