objects/Agent_Target__c/fields/Leads_per_week_Target__c.field-meta.xml
<CustomField>
    <fullName>Leads_per_week_Target__c</fullName>
    <label>Leads per week Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>