objects/Agent_Target__c/fields/Number_of_Working_Weeks__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Working_Weeks__c</fullName>
    <label>Number of Working Weeks</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>