objects/Agent_Target__c/fields/PC_Target__c.field-meta.xml
<CustomField>
    <fullName>PC_Target__c</fullName>
    <label>PC Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>